# vesper-launcher

./: .gitignore  COPYRIGHT  Makefile  README.md  update-log.txt
deploy/linux/: vesper-launcher.service
src/: CMakeLists.txt  ConsoleColorPad.cpp  ConsoleColorPad.h  Log.h  Protocols.cpp  Protocols.h  config.cpp.in  config.h  config.h.in  main.cpp
src/log/: Log.cpp  Log.h
